// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`badge reporter should generate green badges on full covered project: flow-badge green 1`] = `
{
  "attributes": {
    "height": "20",
    "width": "88",
    "xmlns": "http://www.w3.org/2000/svg",
  },
  "children": [
    {
      "attributes": {
        "id": "b",
        "x2": "0",
        "y2": "100%",
      },
      "children": [
        {
          "attributes": {
            "offset": "0",
            "stopColor": "#bbb",
            "stopOpacity": ".1",
          },
          "children": [],
          "name": "stop",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "offset": "1",
            "stopOpacity": ".1",
          },
          "children": [],
          "name": "stop",
          "type": "element",
          "value": "",
        },
      ],
      "name": "linearGradient",
      "type": "element",
      "value": "",
    },
    {
      "attributes": {
        "id": "a",
      },
      "children": [
        {
          "attributes": {
            "fill": "#fff",
            "height": "20",
            "rx": "3",
            "width": "88",
          },
          "children": [],
          "name": "rect",
          "type": "element",
          "value": "",
        },
      ],
      "name": "mask",
      "type": "element",
      "value": "",
    },
    {
      "attributes": {
        "mask": "url(#a)",
      },
      "children": [
        {
          "attributes": {
            "d": "M0 0h34v20H0z",
            "fill": "#555",
          },
          "children": [],
          "name": "path",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "d": "M34 0h54v20H34z",
            "fill": "#4C1",
          },
          "children": [],
          "name": "path",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "d": "M0 0h88v20H0z",
            "fill": "url(#b)",
          },
          "children": [],
          "name": "path",
          "type": "element",
          "value": "",
        },
      ],
      "name": "g",
      "type": "element",
      "value": "",
    },
    {
      "attributes": {
        "fill": "#fff",
        "fontFamily": "Verdana,DejaVu Sans,Geneva,sans-serif",
        "fontSize": "11",
        "textAnchor": "middle",
      },
      "children": [
        {
          "attributes": {
            "fill": "#010101",
            "fillOpacity": ".3",
            "x": "17",
            "y": "15",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "flow",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "x": "17",
            "y": "14",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "flow",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "fill": "#010101",
            "fillOpacity": ".3",
            "x": "60",
            "y": "15",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "passing",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "x": "60",
            "y": "14",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "passing",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
      ],
      "name": "g",
      "type": "element",
      "value": "",
    },
  ],
  "name": "svg",
  "type": "element",
  "value": "",
}
`;

exports[`badge reporter should generate green badges on full covered project: flow-coverage-badge green 1`] = `
{
  "attributes": {
    "height": "20",
    "width": "132",
    "xmlns": "http://www.w3.org/2000/svg",
  },
  "children": [
    {
      "attributes": {
        "id": "b",
        "x2": "0",
        "y2": "100%",
      },
      "children": [
        {
          "attributes": {
            "offset": "0",
            "stopColor": "#bbb",
            "stopOpacity": ".1",
          },
          "children": [],
          "name": "stop",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "offset": "1",
            "stopOpacity": ".1",
          },
          "children": [],
          "name": "stop",
          "type": "element",
          "value": "",
        },
      ],
      "name": "linearGradient",
      "type": "element",
      "value": "",
    },
    {
      "attributes": {
        "id": "a",
      },
      "children": [
        {
          "attributes": {
            "fill": "#fff",
            "height": "20",
            "rx": "3",
            "width": "132",
          },
          "children": [],
          "name": "rect",
          "type": "element",
          "value": "",
        },
      ],
      "name": "mask",
      "type": "element",
      "value": "",
    },
    {
      "attributes": {
        "mask": "url(#a)",
      },
      "children": [
        {
          "attributes": {
            "d": "M0 0h91v20H0z",
            "fill": "#555",
          },
          "children": [],
          "name": "path",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "d": "M91 0h41v20H91z",
            "fill": "#4C1",
          },
          "children": [],
          "name": "path",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "d": "M0 0h132v20H0z",
            "fill": "url(#b)",
          },
          "children": [],
          "name": "path",
          "type": "element",
          "value": "",
        },
      ],
      "name": "g",
      "type": "element",
      "value": "",
    },
    {
      "attributes": {
        "fill": "#fff",
        "fontFamily": "Verdana,DejaVu Sans,Geneva,sans-serif",
        "fontSize": "11",
        "textAnchor": "middle",
      },
      "children": [
        {
          "attributes": {
            "fill": "#010101",
            "fillOpacity": ".3",
            "x": "45.5",
            "y": "15",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "flow-coverage",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "x": "45.5",
            "y": "14",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "flow-coverage",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "fill": "#010101",
            "fillOpacity": ".3",
            "x": "110.5",
            "y": "15",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "100%",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "x": "110.5",
            "y": "14",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "100%",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
      ],
      "name": "g",
      "type": "element",
      "value": "",
    },
  ],
  "name": "svg",
  "type": "element",
  "value": "",
}
`;

exports[`badge reporter should generate red badges on project-low-coverage-with-error: flow-badge red 1`] = `
{
  "attributes": {
    "height": "20",
    "width": "81",
    "xmlns": "http://www.w3.org/2000/svg",
  },
  "children": [
    {
      "attributes": {
        "id": "b",
        "x2": "0",
        "y2": "100%",
      },
      "children": [
        {
          "attributes": {
            "offset": "0",
            "stopColor": "#bbb",
            "stopOpacity": ".1",
          },
          "children": [],
          "name": "stop",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "offset": "1",
            "stopOpacity": ".1",
          },
          "children": [],
          "name": "stop",
          "type": "element",
          "value": "",
        },
      ],
      "name": "linearGradient",
      "type": "element",
      "value": "",
    },
    {
      "attributes": {
        "id": "a",
      },
      "children": [
        {
          "attributes": {
            "fill": "#fff",
            "height": "20",
            "rx": "3",
            "width": "81",
          },
          "children": [],
          "name": "rect",
          "type": "element",
          "value": "",
        },
      ],
      "name": "mask",
      "type": "element",
      "value": "",
    },
    {
      "attributes": {
        "mask": "url(#a)",
      },
      "children": [
        {
          "attributes": {
            "d": "M0 0h34v20H0z",
            "fill": "#555",
          },
          "children": [],
          "name": "path",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "d": "M34 0h47v20H34z",
            "fill": "#E05D44",
          },
          "children": [],
          "name": "path",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "d": "M0 0h81v20H0z",
            "fill": "url(#b)",
          },
          "children": [],
          "name": "path",
          "type": "element",
          "value": "",
        },
      ],
      "name": "g",
      "type": "element",
      "value": "",
    },
    {
      "attributes": {
        "fill": "#fff",
        "fontFamily": "Verdana,DejaVu Sans,Geneva,sans-serif",
        "fontSize": "11",
        "textAnchor": "middle",
      },
      "children": [
        {
          "attributes": {
            "fill": "#010101",
            "fillOpacity": ".3",
            "x": "17",
            "y": "15",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "flow",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "x": "17",
            "y": "14",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "flow",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "fill": "#010101",
            "fillOpacity": ".3",
            "x": "56.5",
            "y": "15",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "failing",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "x": "56.5",
            "y": "14",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "failing",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
      ],
      "name": "g",
      "type": "element",
      "value": "",
    },
  ],
  "name": "svg",
  "type": "element",
  "value": "",
}
`;

exports[`badge reporter should generate red badges on project-low-coverage-with-error: flow-coverage-badge red 1`] = `
{
  "attributes": {
    "height": "20",
    "width": "125",
    "xmlns": "http://www.w3.org/2000/svg",
  },
  "children": [
    {
      "attributes": {
        "id": "b",
        "x2": "0",
        "y2": "100%",
      },
      "children": [
        {
          "attributes": {
            "offset": "0",
            "stopColor": "#bbb",
            "stopOpacity": ".1",
          },
          "children": [],
          "name": "stop",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "offset": "1",
            "stopOpacity": ".1",
          },
          "children": [],
          "name": "stop",
          "type": "element",
          "value": "",
        },
      ],
      "name": "linearGradient",
      "type": "element",
      "value": "",
    },
    {
      "attributes": {
        "id": "a",
      },
      "children": [
        {
          "attributes": {
            "fill": "#fff",
            "height": "20",
            "rx": "3",
            "width": "125",
          },
          "children": [],
          "name": "rect",
          "type": "element",
          "value": "",
        },
      ],
      "name": "mask",
      "type": "element",
      "value": "",
    },
    {
      "attributes": {
        "mask": "url(#a)",
      },
      "children": [
        {
          "attributes": {
            "d": "M0 0h91v20H0z",
            "fill": "#555",
          },
          "children": [],
          "name": "path",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "d": "M91 0h34v20H91z",
            "fill": "#E05D44",
          },
          "children": [],
          "name": "path",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "d": "M0 0h125v20H0z",
            "fill": "url(#b)",
          },
          "children": [],
          "name": "path",
          "type": "element",
          "value": "",
        },
      ],
      "name": "g",
      "type": "element",
      "value": "",
    },
    {
      "attributes": {
        "fill": "#fff",
        "fontFamily": "Verdana,DejaVu Sans,Geneva,sans-serif",
        "fontSize": "11",
        "textAnchor": "middle",
      },
      "children": [
        {
          "attributes": {
            "fill": "#010101",
            "fillOpacity": ".3",
            "x": "45.5",
            "y": "15",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "flow-coverage",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "x": "45.5",
            "y": "14",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "flow-coverage",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "fill": "#010101",
            "fillOpacity": ".3",
            "x": "107",
            "y": "15",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "37%",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
        {
          "attributes": {
            "x": "107",
            "y": "14",
          },
          "children": [
            {
              "attributes": {},
              "children": [],
              "name": "",
              "type": "text",
              "value": "37%",
            },
          ],
          "name": "text",
          "type": "element",
          "value": "",
        },
      ],
      "name": "g",
      "type": "element",
      "value": "",
    },
  ],
  "name": "svg",
  "type": "element",
  "value": "",
}
`;
